# Roommate-Expense-Calculator

./: README.md  expenses.csv  output.csv  pyproject.toml  roommate_expense_calculator.py
tests/: test_roommate_calculator.py
